<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/bg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="24dp"
		android:background="@drawable/dialog_bg"
		android:orientation="vertical">
		<TextView
			android:id="@+id/t1"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:text="@string/api_key_dialog_title"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="#000000" />
		<TextView
			android:id="@+id/t2"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/api_key_dialog_subtitle"
			android:textSize="14sp"
			android:textColor="#757575" />
		<EditText
			android:id="@+id/apiKeyInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:minHeight="48dp"
			android:paddingLeft="16dp"
			android:paddingTop="12dp"
			android:paddingRight="16dp"
			android:paddingBottom="12dp"
			android:background="@drawable/edittext_bg"
			android:hint="@string/api_key_hint"
			android:inputType="textNoSuggestions"
			android:singleLine="true"
			android:textColor="#000000"
			android:textColorHint="#757575"
			android:textSize="14sp" />
		<LinearLayout
			android:id="@+id/linear2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/b1"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="8dp"
				android:padding="12dp"
				android:background="@drawable/dialog_btn_light"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/get_api_key"
				android:textSize="14sp"
				android:textColor="#000000"
				android:layout_weight="1" />
			<TextView
				android:id="@+id/b2"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:padding="12dp"
				android:background="@drawable/dialog_btn_dark"
				android:gravity="center_horizontal|center_vertical"
				android:text="@string/action_done"
				android:textSize="14sp"
				android:textColor="#FFFFFF"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
