<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/bg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="24dp"
		android:background="@drawable/dialog_bg"
		android:orientation="vertical">
		<TextView
			android:id="@+id/t1"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:text="@string/tips_title"
			android:textSize="16sp"
			android:textStyle="bold"
			android:textColor="#000000" />
		<LinearLayout
			android:id="@+id/linearTip1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/t2"
				android:focusable="false"
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="•"
				android:textSize="20sp"
				android:textColor="#616161" />
			<TextView
				android:id="@+id/t3"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="@string/tip_1"
				android:textSize="14sp"
				android:textColor="#757575" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linearTip2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/t4"
				android:focusable="false"
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="•"
				android:textSize="20sp"
				android:textColor="#616161" />
			<TextView
				android:id="@+id/t5"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="@string/tip_2"
				android:textSize="14sp"
				android:textColor="#757575" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linearTip3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/t6"
				android:focusable="false"
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="•"
				android:textSize="20sp"
				android:textColor="#616161" />
			<TextView
				android:id="@+id/t7"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="@string/tip_3"
				android:textSize="14sp"
				android:textColor="#757575" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/linearTip4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/t8"
				android:focusable="false"
				android:layout_width="20dp"
				android:layout_height="match_parent"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="•"
				android:textSize="20sp"
				android:textColor="#616161" />
			<TextView
				android:id="@+id/t9"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingTop="8dp"
				android:paddingBottom="8dp"
				android:text="@string/tip_4"
				android:textSize="14sp"
				android:textColor="#757575" />
		</LinearLayout>
		<TextView
			android:id="@+id/b1"
			android:focusable="false"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:padding="12dp"
			android:background="@drawable/dialog_btn_light"
			android:gravity="center_horizontal|center_vertical"
			android:text="Dismiss"
			android:textSize="14sp"
			android:textColor="#000000"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
