<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:scrollbarSize="3dp"
    android:scrollbarThumbVertical="@drawable/slim_scrollbar_thumb"
    android:scrollbarStyle="insideOverlay"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/instructions_title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="1."
                android:textColor="#616161"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/instruction_step_1"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="2."
                android:textColor="#616161"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/instruction_step_2"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="3."
                android:textColor="#616161"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/instruction_step_3"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="4."
                android:textColor="#616161"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/instruction_step_4"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="5."
                android:textColor="#616161"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/instruction_step_5"
                android:textColor="#757575"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
